# crayg

./: .bumpversion.cfg  .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitlab-ci__.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  build_clean.sh  build_clean_centos.sh  build_vs_2017.bat  build_vs_2019.bat  cmake-format.json  conanfile.txt  generate_coverage.sh  maya_export_script.py  requirements-dev.txt  simple_maya_exporter.py  writeReadStageTest.stage
crayg/: AttributeImpl.cpp  AttributeImpl.h  BmpImageWriter.cpp  BmpImageWriter.h  CMakeLists.txt  Camera.h  Color.cpp  Color.h  Image.cpp  Image.h  Intersectable.h  PineHoleCameraModel.cpp  PineHoleCameraModel.h  Prim.cpp  Prim.h  Ray.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneCreator.h  ShadingMethod.cpp  ShadingMethod.h  Sphere.cpp  Sphere.h  Stage.cpp  Stage.h  Transformable.cpp  Transformable.h  Vector3f.cpp  Vector3f.h
crayg/foundation/: BoundingBox.cpp  BoundingBox.h  Color.cpp  Color.h  Ray.cpp  Ray.h  Vector3f.cpp  Vector3f.h
crayg/image/: BmpImageWriter.cpp  BmpImageWriter.h  Image.cpp  Image.h  ImageIterators.h  ImageWriter.h  ImageWriterFactory.h  LineByLineIterator.h
crayg/intersectors/: Intersectable.h  Intersector.h  SceneIntersector.cpp  SceneIntersector.h  SphereIntersector.cpp  SphereIntersector.h
crayg/lightSamplers/: LightSampler.cpp  LightSampler.h  PointLightSampler.cpp  PointLightSampler.h
crayg/prims/: Attribute.cpp  Attribute.h  AttributeImpl.h  ImageablePrim.cpp  ImageablePrim.h  Prim.cpp  Prim.h  SpherePrim.h  Stage.cpp  Stage.h  TransformablePrim.h
crayg/scene/: Camera.cpp  Camera.h  GroundPlane.cpp  GroundPlane.h  Imageable.cpp  Imageable.h  Light.cpp  Light.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  Sphere.cpp  Sphere.h  Transformable.cpp  TriangeMesh.cpp  TriangeMesh.h  Triangle.cpp  Triangle.h  TriangleMesh.cpp  TriangleMesh.h
crayg/sceneIO/: JsonDeserializer.cpp  JsonDeserializer.h  JsonSerializer.cpp  JsonSerializer.h  SceneReader.cpp  SceneReader.h  SceneReaderFactory.cpp  SceneReaderFactory.h  SceneWriter.cpp  SceneWriter.h  SceneWriterFactory.cpp  SceneWriterFactory.h  Serializable.h  SerializerImplementation.h
crayg/sceneIO/read/: Deserializer.h  SceneReader.cpp  SceneReader.h
crayg/sceneIO/write/: SceneWriter.cpp  SceneWriter.h  Serializer.h  SerializerImplementation.h
crayg/schemas/: ImageablePrim.h  SpherePrim.cpp  SpherePrim.h  TransformablePrim.cpp  TransformablePrim.h
crayg/utils/: ProgressReporter.cpp  ProgressReporter.h  RemainingTimeCalculator.h  StopWatch.h  ToStringHelper.h  utils.h
src/crayg/integrationTests/: CMakeLists.txt  ImageAndFilmFixture.h  cato.json  cato_config.json  imageTests.cpp  imageTests.h  images.cpp  main.cpp  openExrImageFormatWriter.cpp  pngImageFormatWriter.cpp  renderTests.h  renderTestsCato.h  renderUtils.cpp  renderUtils.h  renderings.cpp  sceneIO.cpp  sceneIO.h  utils.cpp  utils.h
src/crayg/src/: CMakeLists.txt  CameraModel.h  CraygInfo.cpp  CraygInfo.h  ImagePathResolver.cpp  ImagePathResolver.h  Initialization.cpp  Initialization.h  Logger.cpp  Logger.h  PineHoleCameraModel.cpp  PineHoleCameraModel.h  Preconditions.cpp  Preconditions.h  Renderer.cpp  Renderer.h  ShadingMethod.cpp  ShadingMethod.h  debuglensevaluation.cpp
src/crayg/tests/: CMakeLists.txt  TestAdaptiveBucketSampler.cpp  TestAdaptiveTileSampler.cpp  TestAreaLight.cpp  TestBarycentricCoordinates.cpp  TestBaseUsdImageableReader.cpp  TestBaseUsdImageableTranslator.cpp  TestBaseUsdLightReader.cpp  TestBaseUsdLightTranslator.cpp  TestBaseUsdLightWriter.cpp  TestBaseUsdReader.cpp  TestBaseUsdSceneObjectWriter.cpp  TestBaseUsdTransformableWriter.cpp  TestBaseUsdTranslator.cpp  TestBaseUsdXformableReader.cpp  TestBaseUsdXformableTranslator.cpp  TestBmpImageWriter.cpp  TestBoundingBox.cpp  TestBounds2d.cpp  TestBucketImageBuffer.cpp  TestBucketQueue.cpp  TestBucketSizeEstimator.cpp  TestBvhBuilder.cpp  TestBvhSceneIntersector.cpp  TestCamera.cpp  TestCameraLens.cpp  TestCheckerBoard.cpp  TestColor.cpp  TestColorConversion.cpp  TestColorToFloat.cpp  TestConversionNodes.cpp  TestDebugIntegrator.cpp  TestDiskLight.cpp  TestDiskLightShapeGenerator.cpp  TestDtoUtils.cpp  TestEmbreeBvhBuilder.cpp  TestEmbreeSceneIntersector.cpp  TestEmbreeUtils.cpp  TestEnumParser.cpp  TestEnumUtils.cpp  (+164 more)
src/craygUsd/src/: CMakeLists.txt  CameraTranslator.cpp  CameraTranslator.h  (+15 more)
src/lensfileeditor/: CMakeLists.txt  main.cpp
src/lensfileutils/: CMakeLists.txt  lensfileembedder.cpp  lensfilerdrawer.cpp  lensfileutils.cpp  lensraylookupgenerator.cpp
src/qtcrayg/: CMakeLists.txt  qt.conf
src/standalone/: CMakeLists.txt
src/standalone-gui/: CMakeLists.txt  FrameBufferWidget.cpp  FrameBufferWidget.h  main.cpp
src/standalonegui/: CMakeLists.txt  FrameBufferWidget.cpp  FrameBufferWidget.h  ImageWidget.cpp  ImageWidget.h  ImageWidgetOutputDriver.cpp  ImageWidgetOutputDriver.h  PanAndZoomArea.cpp  PanAndZoomArea.h  QtBase.h  appicon.rc.in  main.cpp  main_flarerenderer.cpp
test/: CMakeLists.txt  TestBoundingBox.cpp  TestCamera.cpp  TestColor.cpp  TestGroundPlane.cpp  TestImage.cpp  TestJsonDeserializer.cpp  TestJsonSceneReader.cpp  TestLight.cpp  TestPointLightSampler.cpp  TestProgressReporter.cpp  TestRay.cpp  TestSceneIntersector.cpp  TestSceneWriter.cpp  TestShadingMethod.cpp  TestSphere.cpp  TestToStringHelper.cpp  TestTriangle.cpp  TestTriangleMesh.cpp  TestVector.cpp  string_utils.cpp  testGroundPlane.cpp  testLineByLineIterator.cpp  testRemainingTimeCalculator.cpp  testToStringHelper.cpp  testTriangleMesh.cpp  testbmpimagewriter.cpp  testcolor.cpp  testimage.cpp  testlight.cpp  testprim.cpp  testprogressreporter.cpp  testray.cpp  testsceneintersector.cpp  testscenewriter.cpp  testsphere.cpp  teststage.cpp  testtriangle.cpp  testtrianglemesh.cpp  testvector.cpp
test/_old/: CMakeLists.txt
test/testcolor/: CMakeLists.txt  testcolor.cpp
test/testfoo/: CMakeLists.txt  testfoo.cpp
test/testimage/: testimage.cpp
test/testsphere/: testsphere.cpp
test/testvector/: testvector.cpp
(+1940 files in other folders)
